--- a/index.html
+++ b/index.html
@@ -78,6 +78,21 @@
         p strong {
             color: #f44336;
         }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            .tool-card {
+                background-color: #444;
+                color: #fff;
+                border: 1px solid #666;
+                padding: 15px;
+                margin: 5px;
+            }
+
+            .tool-card:active {
+                transform: scale(1.05);
+            }
+        }
     </style>
 </head>
 <body>
@@ -202,5 +217,15 @@
             <p><strong>Why It’s Used:</strong> To understand user interactions, identify pain points, and improve website design for better user experience and conversion rates.</p>
         </div>
     </section>
+
+    <script>
+        // JavaScript for adding touch interaction
+        document.querySelectorAll('.tool-card').forEach(card => {
+            card.addEventListener('touchstart', () => {
+                card.classList.add('active');
+                setTimeout(() => card.classList.remove('active'), 300);
+            });
+        });
+    </script>
 </body>
 </html>
