--- a/index.html
+++ b/index.html
@@ -1,1 +1,264 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Marketing Tools</title>
+    <style>
+        /* General body styling */
+        body {
+            background-color: #1c1c1c;
+            color: #e6e6e6;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
+        header {
+            background-color: #111;
+            color: #f44336;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 3em;
+            color: #f44336;
+        }
+
+        h2 {
+            color: #f44336;
+            margin-left: 20px;
+            margin-bottom: 10px;
+        }
+
+        .category {
+            margin: 20px;
+        }
+
+        .tool-card {
+            background-color: #333;
+            border: 2px solid #444;
+            border-radius: 8px;
+            margin: 10px 0;
+            padding: 20px;
+            transition: transform 0.3s ease, border-color 0.3s ease;
+        }
+
+        .tool-card:hover {
+            transform: scale(1.05);
+            border-color: #f44336;
+        }
+
+        h3 {
+            margin: 0 0 10px 0;
+            color: #ffffff;
+            position: relative;
+            padding-bottom: 10px;
+        }
+
+        h3:after {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 2px;
+            background-color: #f44336;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+
+        p {
+            margin: 5px 0;
+            color: #ccc;
+            font-style: italic;
+        }
+
+        p strong {
+            color: #f44336;
+        }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            .tool-card {
+                background-color: #444;
+                color: #fff;
+                border: 1px solid #666;
+                padding: 15px;
+                margin: 5px;
+            }
+
+            .tool-card:active {
+                transform: scale(1.05);
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Digital Marketing Tools</h1>
+    </header>
+
+    <section class="category">
+        <h2>1. Search Engine Optimization (SEO)</h2>
+
+        <div class="tool-card">
+            <h3>Google Analytics</h3>
+            <p><strong>Description:</strong> Tracks and analyzes website traffic and user behavior. It provides insights into which pages are performing well and which ones need improvement. It also gives detailed reports on user demographics, session duration, and bounce rates.</p>
+            <p><strong>Used By:</strong> Digital marketers, SEO specialists, data analysts.</p>
+            <p><strong>Why It’s Used:</strong> To measure website performance, understand user behavior, and make data-driven decisions that optimize conversion rates and improve overall marketing strategies.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>SEMrush</h3>
+            <p><strong>Description:</strong> Offers comprehensive keyword research, site audits, and competitive analysis. It allows marketers to track keyword positions, analyze competitor strategies, and find opportunities for growing organic traffic.</p>
+            <p><strong>Used By:</strong> SEO professionals, content marketers, digital marketing managers.</p>
+            <p><strong>Why It’s Used:</strong> To improve search engine rankings, optimize content, and stay ahead of competitors by identifying the best keywords and SEO strategies for the market.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Ahrefs</h3>
+            <p><strong>Description:</strong> Provides an all-in-one SEO toolkit with features like backlink tracking, keyword research, content gap analysis, and site audits. Ahrefs is known for its large, reliable database of backlinks and keywords.</p>
+            <p><strong>Used By:</strong> SEO experts, content creators, digital marketers.</p>
+            <p><strong>Why It’s Used:</strong> To monitor backlinks, discover high-performing keywords, analyze website health, and conduct in-depth competitor research.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Moz</h3>
+            <p><strong>Description:</strong> An SEO toolset offering keyword research, rank tracking, site audits, and on-page optimization insights. Moz also provides helpful resources for SEO education and training.</p>
+            <p><strong>Used By:</strong> SEO specialists, content marketers, digital marketing strategists.</p>
+            <p><strong>Why It’s Used:</strong> To enhance search engine rankings, optimize website performance, and stay updated with changes in search engine algorithms.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Google Search Console</h3>
+            <p><strong>Description:</strong> A free service by Google that monitors and improves a website's presence in Google Search results. It helps identify technical issues, monitor search traffic, and analyze how users are interacting with the site.</p>
+            <p><strong>Used By:</strong> SEO professionals, webmasters, digital marketers.</p>
+            <p><strong>Why It’s Used:</strong> To monitor website performance in Google Search, identify and fix issues like crawl errors, and ensure the website is optimized for search engines.</p>
+        </div>
+    </section>
+
+    <section class="category">
+        <h2>2. Social Media Marketing</h2>
+
+        <div class="tool-card">
+            <h3>Hootsuite</h3>
+            <p><strong>Description:</strong> A social media management tool that schedules posts, monitors brand mentions, and tracks social media performance across multiple platforms. It also integrates with other tools like Google Analytics and Slack.</p>
+            <p><strong>Used By:</strong> Social media managers, digital marketers, PR professionals.</p>
+            <p><strong>Why It’s Used:</strong> To efficiently manage multiple social media accounts, engage with followers, and track the effectiveness of social media campaigns.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Buffer</h3>
+            <p><strong>Description:</strong> A scheduling tool for social media posts, Buffer allows you to post content at optimal times and analyze performance with detailed analytics. It also offers a clean and simple user interface for easy post management.</p>
+            <p><strong>Used By:</strong> Social media managers, digital marketers, small business owners.</p>
+            <p><strong>Why It’s Used:</strong> To schedule posts, track performance, and manage multiple social media accounts from one platform, making it easier to stay organized and consistent.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Sprout Social</h3>
+            <p><strong>Description:</strong> Provides tools for social media scheduling, analytics, and customer engagement. It helps streamline communication, allowing brands to engage with their audience more effectively and analyze the performance of social posts.</p>
+            <p><strong>Used By:</strong> Social media managers, digital marketers, customer service teams.</p>
+            <p><strong>Why It’s Used:</strong> To streamline social media management, analyze engagement, and collaborate across teams for consistent messaging across platforms.</p>
+        </div>
+    </section>
+
+    <section class="category">
+        <h2>3. Content Marketing</h2>
+
+        <div class="tool-card">
+            <h3>HubSpot</h3>
+            <p><strong>Description:</strong> A CRM platform that integrates marketing automation, email campaigns, analytics, and lead management tools. HubSpot also provides powerful content creation and SEO optimization tools.</p>
+            <p><strong>Used By:</strong> Marketing teams, sales teams, customer service professionals.</p>
+            <p><strong>Why It’s Used:</strong> To manage customer relationships, automate marketing tasks like email campaigns, and track performance in real-time with comprehensive analytics.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Canva</h3>
+            <p><strong>Description:</strong> A graphic design tool for creating visual content, including social media graphics, presentations, and infographics. Canva offers a simple drag-and-drop interface that is beginner-friendly and packed with templates.</p>
+            <p><strong>Used By:</strong> Content creators, social media managers, marketers.</p>
+            <p><strong>Why It’s Used:</strong> To design visually appealing graphics and marketing materials without requiring professional graphic design skills.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>BuzzSumo</h3>
+            <p><strong>Description:</strong> A content marketing tool that analyzes content performance, identifies popular topics, and finds key influencers within an industry. It provides detailed reports on what content resonates best with the target audience.</p>
+            <p><strong>Used By:</strong> Content marketers, social media managers, PR professionals.</p>
+            <p><strong>Why It’s Used:</strong> To discover trending topics, analyze the performance of competitors' content, and identify influencers who can help amplify brand messaging.</p>
+        </div>
+    </section>
+
+    <section class="category">
+        <h2>4. Email Marketing</h2>
+
+        <div class="tool-card">
+            <h3>Mailchimp</h3>
+            <p><strong>Description:</strong> An all-in-one email marketing platform that allows users to design, send, and analyze email campaigns. Mailchimp offers automation, audience segmentation, and analytics features to optimize campaign performance.</p>
+            <p><strong>Used By:</strong> Email marketers, content creators, small business owners.</p>
+            <p><strong>Why It’s Used:</strong> To create and manage email campaigns, track engagement, and optimize emails for higher open and click rates.</p>
+        </div>
+    </section>
+
+    <section class="category">
+        <h2>5. Automation tools </h2>
+
+        <div class="tool-card">
+            <h3>Marketo</h3>
+            <p><strong>Description:</strong> Marketo is a comprehensive marketing automation platform designed for businesses of all sizes to automate marketing campaigns, manage leads, and track customer engagement across channels.</p>
+            <p><strong>Used By:</strong> Mid-level to Senior-level digital marketers.</p>
+            <p><strong>Why It’s Used:</strong> To manage customer relationships, automate marketing tasks like email campaigns, and track performance in real-time with comprehensive analytics.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Pardot (Salesforce)</h3>
+            <p><strong>Description:</strong> Pardot is a B2B marketing automation tool by Salesforce that focuses on lead generation and nurturing, aligning marketing with sales.</p>
+            <p><strong>Used By:</strong> Mid-level to Senior-level digital marketers.</p>
+            <p><strong>Why It’s Used:</strong> It helps marketers create automated, personalized customer journeys, manage campaigns, and track the performance of leads as they move through the sales funnel.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>ActiveCampaign</h3>
+            <p><strong>Description:</strong> ActiveCampaign is an all-in-one marketing automation platform that combines email marketing, CRM, and sales automation to enhance customer experiences.</p>
+            <p><strong>Used By:</strong> Junior to Mid-level digital marketers.</p>
+            <p><strong>Why It’s Used:</strong>  It allows businesses to segment their audience, personalize email campaigns, and automate follow-ups, while also providing detailed performance analytics.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Oracle Eloqua</h3>
+            <p><strong>Description:</strong> Oracle Eloqua is a leading marketing automation tool that enables large enterprises to plan, execute, and monitor automated marketing campaigns across channels.</p>
+            <p><strong>Used By:</strong> Senior-level digital marketers.</p>
+            <p><strong>Why It’s Used:</strong>  Known for its robust capabilities in lead management, email marketing, and multi-channel campaign management, Eloqua integrates with CRM systems for seamless data tracking and reporting.</p>
+        </div>
+    </section>
+
+    
+    <section class="category">
+        <h2>6. Project Management and Analytics</h2>
+
+        <div class="tool-card">
+            <h3>Trello</h3>
+            <p><strong>Description:</strong> A project management tool that organizes tasks using boards, lists, and cards. Trello is highly customizable and helps teams collaborate more effectively by visualizing workflows.</p>
+            <p><strong>Used By:</strong> Project managers, marketing teams, content creators.</p>
+            <p><strong>Why It’s Used:</strong> To manage and track projects, collaborate with team members, and maintain an organized workflow.</p>
+        </div>
+
+        <div class="tool-card">
+            <h3>Hotjar</h3>
+            <p><strong>Description:</strong> A tool for analyzing user behavior on websites through heatmaps, session recordings, and feedback tools. Hotjar helps identify areas where users may be getting stuck or confused on a website.</p>
+            <p><strong>Used By:</strong> UX/UI designers, digital marketers, product managers.</p>
+            <p><strong>Why It’s Used:</strong> To understand user interactions, identify pain points, and improve website design for better user experience and conversion rates.</p>
+        </div>
+    </section>
+
+    <script>
+        // JavaScript for adding touch interaction
+        document.querySelectorAll('.tool-card').forEach(card => {
+            card.addEventListener('touchstart', () => {
+                card.classList.add('active');
+                setTimeout(() => card.classList.remove('active'), 300);
+            });
+        });
+    </script>
+</body>
+</html>
